fix white space around slashes in justified text

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -253,6 +253,11 @@ dfn {
     text-wrap-mode: nowrap;
 }
 
+.slash {
+    letter-spacing: -0.075em;
+    margin-left: -0.05em;
+}
+
 
 /* make left column pushable to the left on a small screen */
 
